# unitig_coverage

./: CMakeLists.txt  Unitig_coverage  get_unitig_coverage.py  main.cpp  parse_gfa.py
bifrost/: CMakeLists.txt
data/: group3_capsular_graph.gfa  group3_capsular_graph_unitig_coverage.txt  group3_output.coverage  group3_output.edges  group3_output.nodes  mer_counts.jf  mer_counts_dumps.fa
data/fastas/: group3_seqs.fasta
